Adicionado Migrations com sobrecarga e redirecionamento de notícias novas

--- a/src/Base.Web/Views/News/Create.cshtml
+++ b/src/Base.Web/Views/News/Create.cshtml
@@ -52,7 +52,7 @@
         contentType: 'application/json',
         data: JSON.stringify(formData),
         success: function (response) {
-          console.log("Criada notícia.");
+          window.location.href = '@Url.Action("Index")';
         },
         error: function (error) {
           console.log("Erro ao criar notícia.");
